# jarvis

./: .claudeignore  .env.example  .gitattributes  .gitignore  .npmrc  BUILD.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mock.ts  vite.config.ts
.cargo/: audit.toml
.circleci/: config.yml
.github/workflows/: audit.yml  ci.yml  deploy-docs.yml  quality.yml  release.yml
.trellis/: release-readiness.md
.trellis/spec/backend/: cost-analysis.md  fine-report-integration.md  index.md  llm-wire-protocols.md  mcp-agent-integration.md  mcp-client.md  mcp-deploy-confirm.md  memory-system.md
.trellis/spec/frontend/: index.md  theming.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md
.trellis/tasks/06-02-right-click-menu-rework/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-02-settings-single-window-sidebar/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-04-review-fixes-cost-memory/: check.jsonl  task.json
.trellis/tasks/06-06-jenkins-deploy/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-06-voice-input/: task.json
.trellis/tasks/06-15-ci-cargo-test/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-15-observability-tracing/: prd.md  task.json
.trellis/tasks/06-15-pre-public-cleanup/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-15-refactor-split-modules/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-15-test-coverage/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-16-remove-voice-input/: task.json
.trellis/workspace/jarvis/: index.md  journal-1.md
desktop/: batchWrite.html  chat.html  cost.html  index.html  index.mock.html  manualHours.html  settings.html  todayPlan.html  writeHours.html
desktop/src/: App.mock.vue  App.vue  BatchWriteApp.vue  ChatApp.vue  CostApp.vue  ManualHoursApp.vue  SettingsDetailApp.vue  TodayPlanApp.vue  WriteHoursApp.vue  batchWrite-main.ts  chat-main.ts  cost-main.ts  main.mock.ts  manualHours-main.ts  menu-themes.ts  petManifest.ts  settings-main.ts  settings-menu.ts  style-themes.ts  style.css  todayPlan-main.ts  writeHours-main.ts
desktop/src/api/: customPet.ts
desktop/src/components/: Avatar.vue  (+20 more)
docs/: download.md  faq.md  index.md
docs/.vitepress/: config.ts
docs/guide/: contributing.md  index.md  privacy.md
scripts/: analyze-html.ts  analyze-task-model.ts  bundle-daemon.mjs  check-all-tasks.ts  check-assignedTo.ts  check-dev-api.ts  check-mojibake.mjs  check-my-tasks-page.ts  check-project-structure.ts  count-all-my-tasks.ts  count-my-tasks.ts  debug-api.ts  debug-captcha.ts  debug-login.ts  debug-pagination.ts  dev.mjs  dump-all-tasks.ts  enum-browseType.ts  fetch-all-tasks.ts  fetch-api-json.ts  fetch-my-assigned-tasks.ts  fetch-node.mjs  fetch-real-tasks.ts  fetch-tasks-ajax.ts  fetch-zin-tasks.ts  find-76-tasks.ts  find-my-tasks.ts  install-macos-dev.sh  parse-api-data.ts  parse-api-doc.ts  parse-zin-html.ts  portable-zip.mjs  pre-release.mjs  probe-my-tasks.ts  probe-my-tasks2.ts  probe-zentao.ts  probe-zentao2.ts  probe-zentao3.ts  probe-zentao4.ts  probe-zentao5.ts  (+34 more)
scripts/ci/: prepare-tauri-signing.mjs
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bundled/: zentao-test.mjs
src-tauri/capabilities/: default.json
src-tauri/src/: chat_agent.rs  commands.rs  commit_classifier.rs  commit_link.rs  conversations.rs  cost_rates.rs  credentials.rs  daemon_client.rs  daily_review.rs  fine_report.rs  git_scan.rs  lib.rs  llm.rs  logging.rs  main.rs  mcp_client.rs  repo_recommender.rs  settings.rs  settings_extras.rs  task_bindings.rs  task_snapshot.rs  tools.rs  util.rs  voice.rs  worklog.rs  zentao.rs
src-tauri/src/channels/: mod.rs  qqbot.rs  router.rs  telegram.rs  types.rs
src-tauri/src/channels/router/: effort_shortcuts.rs  message_handler.rs  mod.rs  pending_actions.rs  reminders.rs  session.rs  tests.rs
src-tauri/src/commands/: chat.rs  config.rs  custom_pet.rs  deploy_config.rs  llm.rs  mod.rs  tasks.rs  tool.rs  window.rs
src-tauri/src/fine_report/: client.rs  commands.rs  credentials.rs  html_parser.rs  mod.rs
src-tauri/src/git_scan/: cleanup.rs  commits.rs  config.rs  discovery.rs  mod.rs  types.rs
src-tauri/src/llm/: anthropic.rs  chat.rs  mod.rs  responses.rs
src-tauri/src/memory/: db.rs  embedding.rs  extractor.rs  mod.rs
src-tauri/src/tools/: cc_switch_import.rs  chat_tool.rs  cost_report.rs  daily_review_tool.rs  deploy.rs  effort_logging.rs  effort_report.rs  llm_passthrough.rs  mod.rs  risk_analysis.rs  task_commits.rs  task_queries.rs
src/actions/: action-engine.ts  index.ts  predefined-actions.ts
src/agent/: chat-agent.ts
src/ai/: context-builder.ts  index.ts
src/cli/: agent-core.ts  index.ts
src/config/: business-aliases.ts  excluded-business-lines.ts  settings.ts
src/core/: agent-state.ts  index.ts  tool-registry.ts
src/daemon/: daemon-info.ts  server.ts
src/events/: event-bus.ts  index.ts
src/llm/: client.ts
src/mcp/: client.ts  index.ts  tencentcode-client.ts
src/memory/: index.ts  memory-store.ts
src/providers/: base-provider.ts  index.ts  mock-provider.ts  zentao-provider.ts
src/scheduler/: agent-scheduler.ts  index.ts
src/services/: clean-commit-title.ts  commit-effort.ts  commit-link-service.ts  daily-review-service.ts  index.ts  task-service.ts
src/shared/: prompts.ts  types.ts
src/tools/: analyze-risk.ts  ask-llm.ts  cc-switch-import.ts  chat-send.ts  get-daily-review.ts  get-task-commits.ts  get-task-detail.ts  get-tasks.ts  get-today-tasks.ts  index.ts  log-task-effort.ts
tools/: probe-9509.mjs  probe-team-hours.mjs  probe-zentao-team.mjs  probe-zentao.mjs
(+141 files in other folders)
