[package]
name = "jarvis"
version = "0.10.2"
description = "Jarvis Desktop AI Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jarvis_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "socks", "stream"] }
tokio = { version = "1", features = ["sync", "time", "process", "rt", "macros"] }
once_cell = "1"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
rfd = "0.15"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
regex = "1"
chinese_holiday = "2026.0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2"
rmcp = { version = "1.7.0", features = ["client", "transport-child-process"] }
cpal = "0.17.1"
hound = "3.5.1"
enigo = "0.3.0"
arboard = "3.6.1"
# 解 sherpa-onnx 预编译包（官方发的是 .tar.bz2）。
# bzip2-rs：**纯 Rust** 的 bzip2 解码器，不碰 libbz2-sys / cc —— 本机和 CI 都无 cmake/clang/cc，
#   必须避开任何 C 编译（这是换引擎时唯一的依赖风险点，故选纯 Rust 实现）。
# tar：纯 Rust，无虞。
bzip2-rs = "0.1"
tar = "0.4"
# 火山引擎云端 ASR 的 WebSocket 帧需 gzip 编解码（init JSON + 每个音频块都压、响应解压）。
# flate2 默认走 miniz_oxide **纯 Rust** 后端（非 libz-sys/zlib-ng），**不碰 cc/cmake**——
# 且它已在依赖树里（png→tauri、image→arboard 间接引入），列为直接依赖零新增 crate、零编译风险。
flate2 = "1"

# 非 Windows 平台需要 libc::kill 来检测 daemon 进程存活
# Windows 走 tasklist，不需要 libc
[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
