[package]
name = "jarvis"
version = "0.10.3"
description = "Jarvis Desktop AI Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jarvis_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "socks", "stream"] }
tokio = { version = "1", features = ["sync", "time", "process", "rt", "macros"] }
once_cell = "1"
# 结构化日志:tracing 生态。eprintln 全量替换为分级宏,日志按天滚动落盘 ~/.jarvis/logs/。
# tracing-subscriber(env-filter+fmt)做订阅分层(stderr 带色 INFO+,文件无色 DEBUG+)。
# tracing-appender 提供 daily rolling。WorkerGuard 必须保活,否则 appender flush 丢日志。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# 打包诊断日志 zip(已在依赖树里,列直接依赖零新增编译风险)。
zip = "4"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
rfd = "0.15"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
regex = "1"
chinese_holiday = "2026.0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tauri-plugin-autostart = "2.5.1"
rmcp = { version = "1.7.0", features = ["client", "transport-child-process"] }

# 非 Windows 平台需要 libc::kill 来检测 daemon 进程存活
# Windows 走 tasklist，不需要 libc
[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
